OO-2106 fix overlapping titles in LearnTube site

--- a/src/main/webapp/static/themes/light/modules/_video.scss
+++ b/src/main/webapp/static/themes/light/modules/_video.scss
@@ -83,6 +83,10 @@
 			font-size: $font-size-base;
 			margin-top: 0;
 			margin-bottom: 5px;
+			max-width: 100%;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 	}	
 	.o_date {
